--- a/software/sregedit.lfm
+++ b/software/sregedit.lfm
@@ -1,30 +1,30 @@
 object sregeditForm: TsregeditForm
   Left = 669
-  Height = 220
+  Height = 313
   Top = 342
-  Width = 200
+  Width = 431
   Align = alCustom
   BorderStyle = bsToolWindow
   Caption = 'SREG'
-  ClientHeight = 220
-  ClientWidth = 200
+  ClientHeight = 313
+  ClientWidth = 431
   FormStyle = fsStayOnTop
   OnShow = FormShow
   Position = poOwnerFormCenter
   LCLVersion = '2.2.6.0'
   object ButtonReadSreg: TButton
-    Left = 16
+    Left = 69
     Height = 25
-    Top = 184
+    Top = 272
     Width = 75
     Caption = 'Прочитать'
     OnClick = ButtonReadSregClick
     TabOrder = 0
   end
   object ButtonWriteSreg: TButton
-    Left = 112
+    Left = 288
     Height = 25
-    Top = 184
+    Top = 272
     Width = 75
     Caption = 'Записать'
     OnClick = ButtonWriteSregClick
@@ -48,354 +48,227 @@ object sregeditForm: TsregeditForm
     Text = 'Winbond'
   end
   object GroupBoxSREG1: TGroupBox
-    Left = 0
-    Height = 50
-    Top = 32
-    Width = 200
-    ClientHeight = 30
-    ClientWidth = 196
+    Left = 16
+    Height = 210
+    Top = 48
+    Width = 128
+    Caption = 'SREG1'
+    ClientHeight = 190
+    ClientWidth = 124
     TabOrder = 3
     object CheckBoxSB7: TCheckBox
-      Left = 16
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 168
+      Width = 29
+      Caption = '7:'
       TabOrder = 0
     end
     object CheckBoxSB6: TCheckBox
-      Left = 32
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 144
+      Width = 29
+      Caption = '6:'
       TabOrder = 1
     end
     object CheckBoxSB5: TCheckBox
-      Left = 48
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 120
+      Width = 29
+      Caption = '5:'
       TabOrder = 2
     end
     object CheckBoxSB4: TCheckBox
-      Left = 64
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 96
+      Width = 29
+      Caption = '4:'
       TabOrder = 3
     end
     object CheckBoxSB3: TCheckBox
-      Left = 80
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 72
+      Width = 29
+      Caption = '3:'
       TabOrder = 4
     end
     object CheckBoxSB2: TCheckBox
-      Left = 96
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 48
+      Width = 29
+      Caption = '2:'
       TabOrder = 5
     end
     object CheckBoxSB1: TCheckBox
-      Left = 112
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 24
+      Width = 55
+      Caption = '1: WEL'
+      Enabled = False
       TabOrder = 6
     end
     object CheckBoxSB0: TCheckBox
-      Left = 128
-      Height = 19
-      Top = 8
-      Width = 14
-      AutoSize = False
-      OnChange = CheckBoxChange
-      TabOrder = 7
-    end
-    object EditSreg1: TEdit
-      Left = 160
-      Height = 23
-      Top = 4
-      Width = 24
-      MaxLength = 2
-      OnChange = EditSreg1Change
-      TabOrder = 8
-      Text = '00'
-    end
-    object Label1: TLabel
       Left = 8
-      Height = 15
-      Top = 8
-      Width = 6
-      Caption = '7'
-      ParentColor = False
-    end
-    object Label2: TLabel
-      Left = 144
-      Height = 15
-      Top = 8
-      Width = 6
-      Caption = '0'
-      ParentColor = False
-    end
-    object Label7: TLabel
-      Left = 16
-      Height = 15
-      Top = -8
-      Width = 126
-      Alignment = taCenter
-      AutoSize = False
-      Caption = 'SREG1'
-      ParentColor = False
+      Height = 19
+      Top = 0
+      Width = 60
+      Caption = '0: BUSY'
+      Enabled = False
+      TabOrder = 7
     end
   end
   object GroupBoxSREG2: TGroupBox
-    Left = 0
-    Height = 50
-    Top = 80
-    Width = 200
-    ClientHeight = 30
-    ClientWidth = 196
+    Left = 152
+    Height = 210
+    Top = 48
+    Width = 128
+    Caption = 'SREG2'
+    ClientHeight = 190
+    ClientWidth = 124
     TabOrder = 4
     object CheckBoxSB15: TCheckBox
-      Left = 16
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 168
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 0
     end
     object CheckBoxSB14: TCheckBox
-      Left = 32
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 144
+      Width = 82
+      Caption = '14: CMP/TB'
       TabOrder = 1
     end
     object CheckBoxSB13: TCheckBox
-      Left = 48
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 120
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 2
     end
     object CheckBoxSB12: TCheckBox
-      Left = 64
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 96
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 3
     end
     object CheckBoxSB11: TCheckBox
-      Left = 80
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 72
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 4
     end
     object CheckBoxSB10: TCheckBox
-      Left = 96
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 48
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 5
     end
     object CheckBoxSB9: TCheckBox
-      Left = 112
+      Left = 8
       Height = 19
-      Top = 8
-      Width = 20
-      AutoSize = False
-      OnChange = CheckBoxChange
+      Top = 24
+      Width = 47
+      Caption = '9: QE'
       TabOrder = 6
     end
     object CheckBoxSB8: TCheckBox
-      Left = 128
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 0
       Width = 14
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 7
-    end
-    object EditSreg2: TEdit
-      Left = 160
-      Height = 23
-      Top = 4
-      Width = 24
-      MaxLength = 2
-      OnChange = EditSreg2Change
-      TabOrder = 8
-      Text = '00'
-    end
-    object Label3: TLabel
-      Left = 4
-      Height = 15
-      Top = 8
-      Width = 12
-      Caption = '15'
-      ParentColor = False
-    end
-    object Label4: TLabel
-      Left = 144
-      Height = 15
-      Top = 8
-      Width = 6
-      Caption = '8'
-      ParentColor = False
-    end
-    object Label8: TLabel
-      Left = 14
-      Height = 14
-      Top = -8
-      Width = 128
-      Alignment = taCenter
-      AutoSize = False
-      Caption = 'SREG2'
-      ParentColor = False
     end
   end
   object GroupBoxSREG3: TGroupBox
-    Left = 0
-    Height = 50
-    Top = 128
-    Width = 200
-    ClientHeight = 30
-    ClientWidth = 196
+    Left = 288
+    Height = 210
+    Top = 48
+    Width = 128
+    Caption = 'SREG3'
+    ClientHeight = 190
+    ClientWidth = 124
     TabOrder = 5
     object CheckBoxSB23: TCheckBox
-      Left = 16
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 168
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 0
     end
     object CheckBoxSB22: TCheckBox
-      Left = 32
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 144
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 1
     end
     object CheckBoxSB21: TCheckBox
-      Left = 48
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 120
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 2
     end
     object CheckBoxSB20: TCheckBox
-      Left = 64
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 96
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 3
     end
     object CheckBoxSB19: TCheckBox
-      Left = 80
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 72
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 4
     end
     object CheckBoxSB18: TCheckBox
-      Left = 96
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 48
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 5
     end
     object CheckBoxSB17: TCheckBox
-      Left = 112
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 24
       Width = 20
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 6
     end
     object CheckBoxSB16: TCheckBox
-      Left = 128
+      Left = 8
       Height = 19
-      Top = 8
+      Top = 0
       Width = 14
       AutoSize = False
-      OnChange = CheckBoxChange
       TabOrder = 7
-    end
-    object Label5: TLabel
-      Left = 4
-      Height = 15
-      Top = 8
-      Width = 12
-      Caption = '23'
-      ParentColor = False
-    end
-    object EditSreg3: TEdit
-      Left = 160
-      Height = 23
-      Top = 4
-      Width = 24
-      MaxLength = 2
-      OnChange = EditSreg3Change
-      TabOrder = 8
-      Text = '00'
-    end
-    object Label6: TLabel
-      Left = 144
-      Height = 15
-      Top = 8
-      Width = 12
-      Caption = '16'
-      ParentColor = False
-    end
-    object Label9: TLabel
-      Left = 16
-      Height = 15
-      Top = -8
-      Width = 124
-      Alignment = taCenter
-      AutoSize = False
-      Caption = 'SREG3'
-      ParentColor = False
     end
   end
 end
