--- a/software/main.lfm
+++ b/software/main.lfm
@@ -5,7 +5,7 @@ object MainForm: TMainForm
   Width = 853
   ActiveControl = RadioSPI
   Caption = 'AsProgrammer'
-  ClientHeight = 521
+  ClientHeight = 541
   ClientWidth = 853
   Constraints.MinHeight = 300
   Constraints.MinWidth = 300
@@ -14,11 +14,11 @@ object MainForm: TMainForm
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poDesktopCenter
-  LCLVersion = '2.2.6.0'
+  LCLVersion = '3.2.0.0'
   object ProgressBar: TProgressBar
     Left = 0
     Height = 20
-    Top = 406
+    Top = 426
     Width = 853
     Align = alBottom
     Max = 0
@@ -117,33 +117,33 @@ object MainForm: TMainForm
       Left = 393
       Height = 19
       Top = 2
-      Width = 36
+      Width = 34
       Caption = 'SPI'
       Checked = True
-      OnChange = RadioSPIChange
       ParentFont = False
       TabOrder = 0
       TabStop = True
+      OnChange = RadioSPIChange
     end
     object RadioI2C: TRadioButton
-      Left = 429
+      Left = 427
       Height = 19
       Top = 2
-      Width = 37
+      Width = 35
       Caption = 'I2C'
-      OnChange = RadioI2CChange
       ParentFont = False
       TabOrder = 1
+      OnChange = RadioI2CChange
     end
     object RadioMw: TRadioButton
-      Left = 466
+      Left = 462
       Height = 19
       Top = 2
-      Width = 107
+      Width = 105
       Caption = 'Microwire(16bit)'
-      OnChange = RadioMwChange
       ParentFont = False
       TabOrder = 2
+      OnChange = RadioMwChange
     end
     object ToolButton2: TToolButton
       Left = 341
@@ -189,7 +189,7 @@ object MainForm: TMainForm
       Style = tbsSeparator
     end
     object ToolButton4: TToolButton
-      Left = 573
+      Left = 567
       Height = 32
       Top = 2
       Caption = 'ToolButton4'
@@ -198,11 +198,11 @@ object MainForm: TMainForm
   end
   object GroupChipSettings: TGroupBox
     Left = 0
-    Height = 349
+    Height = 369
     Top = 34
     Width = 160
     Align = alLeft
-    ClientHeight = 329
+    ClientHeight = 349
     ClientWidth = 156
     ParentFont = False
     TabOrder = 2
@@ -370,11 +370,11 @@ object MainForm: TMainForm
         'KB9012'
         '95xx'
       )
-      OnChange = ComboSPICMDChange
       ParentFont = False
       Style = csDropDownList
       TabOrder = 4
       Text = '25xx'
+      OnChange = ComboSPICMDChange
     end
     object LabelSPICMD: TLabel
       Left = 24
@@ -417,10 +417,10 @@ object MainForm: TMainForm
         Width = 20
         Caption = '1'
         Checked = True
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         State = cbChecked
         TabOrder = 0
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_DevA6: TToggleBox
         Left = 20
@@ -428,9 +428,9 @@ object MainForm: TMainForm
         Top = 17
         Width = 20
         Caption = '0'
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         TabOrder = 1
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_DevA5: TToggleBox
         Left = 40
@@ -439,10 +439,10 @@ object MainForm: TMainForm
         Width = 20
         Caption = '1'
         Checked = True
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         State = cbChecked
         TabOrder = 2
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_DevA4: TToggleBox
         Left = 60
@@ -450,9 +450,9 @@ object MainForm: TMainForm
         Top = 17
         Width = 20
         Caption = '0'
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         TabOrder = 3
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_A2: TToggleBox
         Left = 80
@@ -460,9 +460,9 @@ object MainForm: TMainForm
         Top = 17
         Width = 20
         Caption = '0'
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         TabOrder = 4
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_A1: TToggleBox
         Left = 100
@@ -470,9 +470,9 @@ object MainForm: TMainForm
         Top = 17
         Width = 20
         Caption = '0'
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         TabOrder = 5
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_A0: TToggleBox
         Left = 120
@@ -480,15 +480,15 @@ object MainForm: TMainForm
         Top = 17
         Width = 20
         Caption = '0'
-        OnChange = I2C_DevAddrChange
         ParentFont = False
         TabOrder = 6
+        OnChange = I2C_DevAddrChange
       end
       object CheckBox_I2C_ByteRead: TCheckBox
         Left = 0
         Height = 19
         Top = 40
-        Width = 128
+        Width = 126
         Caption = 'Побайтовое чтение'
         ParentFont = False
         TabOrder = 7
@@ -530,10 +530,10 @@ object MainForm: TMainForm
       Top = 296
       Width = 63
       MaxLength = 8
-      OnChange = StartAddressEditChange
-      OnKeyPress = StartAddressEditKeyPress
       TabOrder = 7
       Text = '000000'
+      OnChange = StartAddressEditChange
+      OnKeyPress = StartAddressEditKeyPress
     end
     object Label6: TLabel
       Left = 8
@@ -557,7 +557,7 @@ object MainForm: TMainForm
   object MPHexEditorEx: TMPHexEditorEx
     Cursor = crIBeam
     Left = 160
-    Height = 349
+    Height = 369
     Top = 34
     Width = 693
     CreateBackup = False
@@ -672,7 +672,7 @@ object MainForm: TMainForm
   object StatusBar: TStatusBar
     Left = 0
     Height = 23
-    Top = 383
+    Top = 403
     Width = 853
     Panels = <    
       item
@@ -695,7 +695,7 @@ object MainForm: TMainForm
   object Log: TMemo
     Left = 0
     Height = 90
-    Top = 431
+    Top = 451
     Width = 853
     Align = alBottom
     Lines.Strings = (
@@ -713,7 +713,7 @@ object MainForm: TMainForm
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 426
+    Top = 446
     Width = 853
     Align = alBottom
     Anchors = [akBottom]
@@ -943,6 +943,12 @@ object MainForm: TMainForm
         Caption = 'CH341a'
         RadioItem = True
         OnClick = MenuHWCH341AClick
+      end
+      object MenuHWCH347: TMenuItem
+        AutoCheck = True
+        Caption = 'CH347T'
+        RadioItem = True
+        OnClick = MenuHWCH347Click
       end
       object MenuHWAVRISP: TMenuItem
         AutoCheck = True
